syntax = "proto3";

package task.v1;

option go_package = "github.com/zaouldyeck/taskboard/pkg/api/task/v1;taskv1";

// Import std protobuf types.
import "google/protobuf/timestamp.proto";

// Task is a single task.
message Task {
  int64 id = 1;
  int64 board_id = 2;
  string title = 3;
  string description = 4;
  bool completed = 5;
  int64 created_by = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

message CreateTaskRequest {
  int64 board_id = 1;
  string title = 2;
  string description = 3;
  int64 created_by = 4;
}

message CreateTaskResponse {
  Task task = 1;
}

message GetTaskRequest {
  int64 id = 1;
}

message GetTaskResponse {
  Task task = 1;
}

message ListTasksRequest {
  // Filter by board.
  int64 board_id = 1;

  // Filter based on if the task is completed. (optional)
  // If not set, returns all tasks.
  optional bool completed = 2;
  
  int32 page_size = 3;
  int32 page_number = 4;
}

message ListTasksResponse {
  repeated Task tasks = 1;
  int32 total_count = 2;
}

message UpdateTaskRequest {
  int64 id = 1;
  optional string title = 2;
  optional string description = 3;
  optional bool completed = 4;
}

message UpdateTaskResponse {
  Task task = 1;
}

message DeleteTaskRequest {
  int64 id = 1;
}

message DeleteTaskResponse {
  bool success = 1;
}

// TaskService defines service API.
service TaskService {
  rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse) {}
  rpc ListTasks(ListTasksRequest) returns (ListTasksResponse) {}
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse) {}
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {}
  
  // Server rpc streaming of task updates, by watching on list of tasks.
  rpc WatchTasks(ListTasksRequest) returns (stream Task) {}
}























